--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: WP Rig
+Theme Name: WP Rig Buddy
 Theme URI: https://github.com/wprig/wprig/
 Author: The WP Rig Contributors
 Author URI: https://github.com/wprig/wprig/
